2010-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* iconimage.py: Added support for custom icon theme.
	* tumblr.py: Added checking entries without title.

2010-05-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py: Improved Code (Added support for EXIF make tag).
	* rss.py: Added support weighted random with standard scores.

2010-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Added support weighted random for each rss feed in mixed
	  rss feeds.

2010-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, base.py, picasa.py: Added support for EXIF tooltips.

2010-05-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py: Added ActorInfoIcon.
	* preferences.py: Added tooltips on the photo source
	  treeview (issue #57).

2010-05-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage/: Added tooltip on clutter actors.

2010-05-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimagegtk.py, gphotoframe.schemas.in: Added new gconf key
	  'date_format'.
	* flickr, fspot, picasa, photoimagegtk.py: Added date taken on
	  tooltips.

2010-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, api.py: Added checking authorization.
	* tumblr.py: Added checking authorization.
	* config.py: Added get_list & set_list.
	* preferences.py, plugins/__init__.py: Added plugin on/off function.

2010-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Fixed class of URL (unicode -> str).
	* utils/urlgetautoproxy.py: Added new class UrlgetWithAutoProxy.
	  Code refactoring.  pacparser -> libproxy.
	* flickr/__init__.py, api.py: Added new gconf key
	  'plugins/flickr/interval_for_meta_group'.
	* flickr/api.py: Added a random group pickup method among 'The Commons'.
	
2010-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Added a random group pickup method among 'Your Groups'.
	* photoimagegtk.py: Added image size filter.
	  Changed gconf key names: aspect_* -> filter/aspect_*.