@@ -1,3 +1,7 @@
+2010-05-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/api.py: Added FlickrExifAPI.
+
 2010-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* iconimage.py: Added support for custom icon theme.
